--- a/src/Frameworks/View/SoftwareIntegrityToolResult.xaml
+++ b/src/Frameworks/View/SoftwareIntegrityToolResult.xaml
@@ -28,8 +28,10 @@
                     <StackPanel Orientation="Vertical">
                         <TextBlock Text="Software Integrity Check Results" FontWeight="Bold" FontSize="15" VerticalAlignment="Center" HorizontalAlignment="Left"/>
                         <TextBlock x:Name="TXT_RESULT_HEADER" Text="소프트웨어 무결성 검사 도구가 이 소프트웨어의 문제점을 확인하고 있습니다.&#x0a;이 도구 및 소프트웨어를 종료하지 마십시오." Margin="0,10,0,0" FontSize="15" VerticalAlignment="Center" HorizontalAlignment="Left"/>
-
-                        <TextBlock x:Name="TXT_RESULT_DETAIL" Text="모델이 없음" Foreground="Gray" Margin="10,10,0,0"/>
+                        <ScrollViewer Height="80" VerticalScrollBarVisibility="Auto" Margin="10">
+                            <TextBlock
+                             x:Name="TXT_RESULT_DETAIL" Text="모델이 없음" Foreground="Gray" />
+                        </ScrollViewer>
                     </StackPanel>
                 </Grid>
 
